# QuantDirect

./: .gitignore  .gitmodules  DEV.md  README.md
App/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json
App/scripts/: build-electron.mjs  dev.mjs  package.mjs  start.mjs
App/src/: WebCTP  global.d.ts  ipcChannels.ts  main.ts  preload.ts
App/src/app/: GlobalStyle.jsx  layout.tsx  page.tsx
App/src/types/: settings.ts  window-controls.ts
DataServer/: nodemon.json  package-lock.json  package.json  tsconfig.json
DataServer/doc/: API.md  DESIGN.md  TODO.md
DataServer/old/: .gitignore  run.sh  tsconfig.json
DataServer/old/src/: config.json
DataServer/scripts/database/: README.md  buildup.sql  export_options.py  import_calender.py  import_options.py  list_options.py
DataServer/src/: config.json  logger.ts
DataServer/src/routes/: stock.ts
Doc/: DESCRIPTION-Charts.md  DEV.md  Server.md
Engine/: CMakeLists.txt  Cargo.toml  README.md  example_config.json
Engine/doc/: TODO.md  config.md  usage.md
Engine/src/: args.rs  argv.cpp  argv.hpp  main.cpp  main.rs
Engine/src/server/: mod.rs
Engine/src/server/controller/: mod.rs
Engine/src/server/router/: mod.rs
Server/: .gitignore  README.md  REDIS_INTEGRATION.md  REDIS_SETUP_COMPLETE.md  docker-compose.yml  package-lock.json  package.json  redis.conf  run.sh  start-redis.bat  start-redis.ps1  test-redis.js  tsconfig.json
Server/src/: config.json  index.ts  logger.ts  openapi.json
Website/: package-lock.json  package.json  tsconfig.json
(+108 files in other folders)
